test/spec_vectors/table/ok/module_8.wat
(module (table 1 (ref null func)))