test/spec_vectors/table/fail/module_26.wat
(module (table 1 (ref func) (ref.null extern)))